many changes many many changes

--- a/work/.slicemachine/mock-config.json
+++ b/work/.slicemachine/mock-config.json
@@ -142,6 +142,24 @@
       "default": {
         "primary": {},
         "items": {}
+      },
+      "date": {
+        "items": {
+          "text": {
+            "config": {
+              "patternType": "PARAGRAPH",
+              "blocks": 1
+            }
+          }
+        },
+        "primary": {
+          "title": {
+            "config": {
+              "patternType": "PARAGRAPH",
+              "blocks": 1
+            }
+          }
+        }
       }
     },
     "AboutInfo": {
@@ -161,6 +179,63 @@
             }
           }
         }
+      }
+    },
+    "ContactInfo": {
+      "default": {
+        "primary": {
+          "title": {
+            "config": {
+              "patternType": "PARAGRAPH",
+              "blocks": 1
+            }
+          }
+        },
+        "items": {}
+      }
+    },
+    "Education": {
+      "default": {
+        "primary": {}
+      }
+    },
+    "Collections": {
+      "default": {
+        "primary": {},
+        "items": {
+          "text": {
+            "config": {
+              "patternType": "PARAGRAPH",
+              "blocks": 1
+            }
+          }
+        }
+      }
+    },
+    "Bibliography": {
+      "default": {
+        "primary": {},
+        "items": {
+          "text": {
+            "config": {
+              "patternType": "PARAGRAPH",
+              "blocks": 1
+            }
+          }
+        }
+      }
+    },
+    "Exhibitions": {
+      "default": {
+        "items": {
+          "title": {
+            "config": {
+              "patternType": "PARAGRAPH",
+              "blocks": 1
+            }
+          }
+        },
+        "primary": {}
       }
     }
   },
