some more fixes

--- a/work/.slicemachine/mock-config.json
+++ b/work/.slicemachine/mock-config.json
@@ -117,7 +117,14 @@
     },
     "Project": {
       "default": {
-        "primary": {}
+        "primary": {
+          "namedateyear": {
+            "config": {
+              "patternType": "PARAGRAPH",
+              "blocks": 1
+            }
+          }
+        }
       }
     },
     "About": {
