--- a/work/.slicemachine/mock-config.json
+++ b/work/.slicemachine/mock-config.json
@@ -206,6 +206,12 @@
               "patternType": "PARAGRAPH",
               "blocks": 1
             }
+          },
+          "description": {
+            "config": {
+              "patternType": "PARAGRAPH",
+              "blocks": 1
+            }
           }
         }
       }
