--- a/work/package.json
+++ b/work/package.json
@@ -16,8 +16,6 @@
   },
   "dependencies": {
     "@fontsource/inter": "^4.5.13",
-    "nuxt": "^2.15.8",
-    "vue-slick-carousel": "^1.0.6",
     "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/eslint-config": "^11.0.0",
     "@nuxtjs/eslint-module": "^3.1.0",
@@ -26,12 +24,14 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "concurrently": "^7.4.0",
     "eslint": "^8.24.0",
+    "nuxt": "^2.15.8",
     "nuxt-purgecss": "^2.0.0",
     "postcss": "^8.4.21",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "slice-machine-ui": "^0.6.0",
-    "tailwindcss": "^3.3.0"
+    "slice-machine-ui": "^1.0.2",
+    "tailwindcss": "^3.3.0",
+    "vue-slick-carousel": "^1.0.6"
   },
   "devDependencies": {
     "@nuxt/postcss8": "^1.1.3",
@@ -39,6 +39,7 @@
     "@nuxtjs/eslint-module": "^3.1.0",
     "@nuxtjs/prismic": "^1.4.2",
     "@prismicio/slice-simulator-vue": "^0.2.1",
+    "@slicemachine/adapter-nuxt2": "^0.1.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "concurrently": "^7.4.0",
     "eslint": "^8.24.0",
