--- a/work/slicemachine.config.json
+++ b/work/slicemachine.config.json
@@ -1,5 +1,5 @@
 {
-  "apiEndpoint": "https://pippasschier.cdn.prismic.io/api/v2",
+  "apiEndpoint": "https://pleasework.cdn.prismic.io/api/v2",
   "repositoryName": "pippasschier",
   "adapter": "@slicemachine/adapter-nuxt2",
   "libraries": ["./slices"],
